<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_vente"/>
        <item
            android:id="@+id/nav_categorie"
            android:icon="@drawable/ic_reorder"
            android:title="@string/categorie" />
        <item
            android:id="@+id/nav_recherche"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_recherche" />
        <item
            android:id="@+id/nav_deconnexion"
            android:icon="@drawable/ic_keyboard"
            android:title="@string/Deconnexion" />
    </group>


</menu>
