<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#E23D8F"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:padding="30dp">

        <Button
            android:id="@+id/cat_femme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:onClick="cat_femme"
            android:text="@string/femme"
            android:textColor="#E23D8F"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:padding="30dp"
        android:background="#3F7DD1">
        <Button
            android:id="@+id/cat_homme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/homme"
            android:background="@color/white"
            android:textColor="@color/couleur3"
            android:textSize="35sp"
            android:textStyle="bold"
            android:onClick="cat_homme"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/BEB"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:padding="35dp">

        <Button
            android:id="@+id/cat_bebe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:text="@string/bebe"
            android:onClick="cat_bebe"
            android:textColor="@color/BEB"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>